--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_dns_alias.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_dns_alias.yaml
@@ -22,7 +22,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com","name":"mytestzone1.com","type":"Microsoft.Network\/dnszones","etag":"4f17cce5-59a2-47c1-8ed1-a21b32908b64","location":"global","tags":{},"properties":{"maxNumberOfRecordSets":10000,"maxNumberOfRecordsPerRecordSet":null,"nameServers":["ns1-34.daily.azure-dns.com.","ns2-34.daily.azure-dns.net.","ns3-34.daily.azure-dns.org.","ns4-34.daily.azure-dns.info."],"numberOfRecordSets":2,"zoneType":"Public"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com","name":"mytestzone1.com","type":"Microsoft.Network\/dnszones","etag":"d3b61710-a063-486f-9c72-4d2012b0b8e7","location":"global","tags":{},"properties":{"maxNumberOfRecordSets":10000,"maxNumberOfRecordsPerRecordSet":null,"nameServers":["ns1-32.daily.azure-dns.com.","ns2-32.daily.azure-dns.net.","ns3-32.daily.azure-dns.org.","ns4-32.daily.azure-dns.info."],"numberOfRecordSets":2,"zoneType":"Public"}}'
     headers:
       cache-control:
       - private
@@ -31,9 +31,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Jun 2023 22:18:28 GMT
+      - Thu, 22 Jun 2023 00:14:28 GMT
       etag:
-      - 4f17cce5-59a2-47c1-8ed1-a21b32908b64
+      - d3b61710-a063-486f-9c72-4d2012b0b8e7
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -41,9 +41,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11989'
+      - '11998'
       x-msedge-ref:
-      - 'Ref A: 12EA581366D445BD8A0B7C24CBBC151F Ref B: CO6AA3150218047 Ref C: 2023-06-21T22:18:25Z'
+      - 'Ref A: F7A6370326EA4AA0962FA71F3F8B0B8D Ref B: CO6AA3150220021 Ref C: 2023-06-22T00:14:26Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -84,7 +84,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Jun 2023 22:18:31 GMT
+      - Thu, 22 Jun 2023 00:14:32 GMT
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-aspnet-version:
@@ -94,9 +94,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '10797'
+      - '10798'
       x-msedge-ref:
-      - 'Ref A: DC97F24C8A534C509477E96CD2A2BD62 Ref B: CO6AA3150218029 Ref C: 2023-06-21T22:18:28Z'
+      - 'Ref A: 82FDC8156E464CD0ACC2E598B01750B3 Ref B: CO6AA3150219029 Ref C: 2023-06-22T00:14:28Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -125,7 +125,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/a/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"572d6873-61ff-4f10-9a81-4bf0764c78b8","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"58218bfe-fed7-44d3-b82b-da41b22adece","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -134,9 +134,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Jun 2023 22:18:36 GMT
+      - Thu, 22 Jun 2023 00:14:39 GMT
       etag:
-      - 572d6873-61ff-4f10-9a81-4bf0764c78b8
+      - 58218bfe-fed7-44d3-b82b-da41b22adece
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -144,14 +144,62 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11970'
+      - '11996'
       x-msedge-ref:
-      - 'Ref A: 5E63340EFCA841FA96F844B90AB2B75D Ref B: CO6AA3150217023 Ref C: 2023-06-21T22:18:31Z'
+      - 'Ref A: B1C81753F9B04B40A753BB86C37BAA93 Ref B: CO6AA3150219023 Ref C: 2023-06-22T00:14:32Z'
       x-powered-by:
       - ASP.NET
     status:
       code: 201
       message: Created
+- request:
+    body: '{"properties": {"targetResources": [{"id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/trafficManagerProfiles/tm1"}]}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - network dns list-references
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '195'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - --parameters
+      User-Agent:
+      - AZURECLI/2.49.0 (AAZ) azsdk-python-core/1.26.0 Python/3.11.2 (Windows-10-10.0.22621-SP0)
+    method: POST
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/getDnsResourceReference?api-version=2023-07-01-preview
+  response:
+    body:
+      string: '{"properties":{"dnsResourceReferences":[{"dnsResources":[{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/microsoft.network\/dnsZones\/mytestzone1.com\/A\/a1"}],"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourcegroups\/cli_test_dns_alias000001\/providers\/microsoft.network\/trafficmanagerprofiles\/tm1"}}]}}'
+    headers:
+      cache-control:
+      - private
+      content-length:
+      - '411'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Thu, 22 Jun 2023 00:14:39 GMT
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '11996'
+      x-msedge-ref:
+      - 'Ref A: 92D43E4778CF4A109F0EEA1CB8D12A84 Ref B: CO6AA3150220017 Ref C: 2023-06-22T00:14:39Z'
+      x-powered-by:
+      - ASP.NET
+    status:
+      code: 200
+      message: OK
 - request:
     body: null
     headers:
@@ -171,7 +219,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/A/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"572d6873-61ff-4f10-9a81-4bf0764c78b8","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"58218bfe-fed7-44d3-b82b-da41b22adece","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"targetResource":{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/trafficManagerProfiles\/tm1"},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -180,9 +228,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Jun 2023 22:18:36 GMT
+      - Thu, 22 Jun 2023 00:14:40 GMT
       etag:
-      - 572d6873-61ff-4f10-9a81-4bf0764c78b8
+      - 58218bfe-fed7-44d3-b82b-da41b22adece
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -190,16 +238,16 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11997'
+      - '11999'
       x-msedge-ref:
-      - 'Ref A: 3B18A6A40BD74DE29FCE2C7EEC4D5EAE Ref B: CO6AA3150217025 Ref C: 2023-06-21T22:18:36Z'
+      - 'Ref A: EF4CF1895EDA4318BFAC229C60B7919C Ref B: CO6AA3150218033 Ref C: 2023-06-22T00:14:40Z'
       x-powered-by:
       - ASP.NET
     status:
       code: 200
       message: OK
 - request:
-    body: '{"etag": "572d6873-61ff-4f10-9a81-4bf0764c78b8", "properties": {"TTL":
+    body: '{"etag": "58218bfe-fed7-44d3-b82b-da41b22adece", "properties": {"TTL":
       30}}'
     headers:
       Accept:
@@ -222,7 +270,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_dns_alias000001/providers/Microsoft.Network/dnsZones/mytestzone1.com/A/a1?api-version=2023-07-01-preview
   response:
     body:
-      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"fb26fbcd-423c-40b2-ae5d-232196977a73","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"ARecords":[],"targetResource":{},"provisioningState":"Succeeded"}}'
+      string: '{"id":"\/subscriptions\/00000000-0000-0000-0000-000000000000\/resourceGroups\/cli_test_dns_alias000001\/providers\/Microsoft.Network\/dnszones\/mytestzone1.com\/A\/a1","name":"a1","type":"Microsoft.Network\/dnszones\/A","etag":"6d5597f6-9317-44e7-a3de-46f96dbe0367","properties":{"fqdn":"a1.mytestzone1.com.","TTL":30,"ARecords":[],"targetResource":{},"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - private
@@ -231,9 +279,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Jun 2023 22:18:41 GMT
+      - Thu, 22 Jun 2023 00:14:45 GMT
       etag:
-      - fb26fbcd-423c-40b2-ae5d-232196977a73
+      - 6d5597f6-9317-44e7-a3de-46f96dbe0367
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       x-cache:
@@ -241,9 +289,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11977'
+      - '11997'
       x-msedge-ref:
-      - 'Ref A: 888CD91DBC2D4647A015E95468C5F2C5 Ref B: CO6AA3150217025 Ref C: 2023-06-21T22:18:37Z'
+      - 'Ref A: 2CCFBAEDEED54956BCA28A9F4243D2E7 Ref B: CO6AA3150218033 Ref C: 2023-06-22T00:14:40Z'
       x-powered-by:
       - ASP.NET
     status:
