--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -902,6 +902,7 @@ stages:
           publishLocation: 'Container'
 
 - stage: SendEmail
+  displayName: Send Email
   jobs:
   -job: SendEmail
     displayName: Send email
