--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -905,7 +905,7 @@ stages:
   displayName: Send Email
   jobs:
   -job: SendEmail
-    displayName: Send email
+    displayName: Send Email job
     timeoutInMinutes: 360
     pool:
       name: ${{ variables.ubuntu_pool }}
