--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -23,7 +23,7 @@ variables:
 #  always: true
 
 stages:
-- stage: Test
+- stage: TestWindows
   displayName: Live Test on Windows 2019
   jobs:
   - job: LiveTestPython38
@@ -462,7 +462,7 @@ stages:
           ArtifactName: '$(Target).windows2019.report.sequential.json'
           publishLocation: 'Container'
 
-- stage: Test
+- stage: TestMacos
   displayName: Live Test on Macos 12
   jobs:
   - job: LiveTestPython38
