--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -98,7 +98,7 @@ stages:
           Target: find
         hdinsight:
           Target: hdinsight
-        identity：
+        identity:
           Target: identity
         iot:
           Target: iot
@@ -649,7 +649,7 @@ stages:
           Target: find
         hdinsight:
           Target: hdinsight
-        identity：
+        identity:
           Target: identity
         iot:
           Target: iot
@@ -1201,7 +1201,7 @@ stages:
           Target: find
         hdinsight:
           Target: hdinsight
-        identity：
+        identity:
           Target: identity
         iot:
           Target: iot
