--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -166,7 +166,7 @@ stages:
           Target: vm
         ext-account:
           Target: ext-account
-        ext-acrquery：
+        ext-acrquery:
           Target: ext-acrquery
         ext-acrtransfer:
           Target: ext-acrtransfer
@@ -717,7 +717,7 @@ stages:
           Target: vm
         ext-account:
           Target: ext-account
-        ext-acrquery：
+        ext-acrquery:
           Target: ext-acrquery
         ext-acrtransfer:
           Target: ext-acrtransfer
@@ -1269,7 +1269,7 @@ stages:
           Target: vm
         ext-account:
           Target: ext-account
-        ext-acrquery：
+        ext-acrquery:
           Target: ext-acrquery
         ext-acrtransfer:
           Target: ext-acrtransfer
