--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -516,14 +516,14 @@ stages:
           # Whether commit changes
           if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" ]]; then
             echo "Commit mode"
-            azdev test ${FinalTarget} --no-exitfirst -a "-n auto"
-            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
+            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
             azdev test ${FinalTarget} $(USER_LIVE) --mark serial --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
             # Parallel
-            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           fi
   
           pwd
@@ -1069,14 +1069,14 @@ stages:
           # Whether commit changes
           if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" ]]; then
             echo "Commit mode"
-            azdev test ${FinalTarget} --no-exitfirst -a "-n auto"
-            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
+            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
             azdev test ${FinalTarget} $(USER_LIVE) --mark serial --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
             # Parallel
-            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           fi
   
           pwd
@@ -1602,7 +1602,17 @@ stages:
           pip install azdev pytest-json-report pytest-html pytest-rerunfailures
   
           azdev setup -c azure-cli -r azure-cli-extensions
-  
+          
+          # Remove ext- prefix
+          FinalTarget="$(Target)"
+          if [[ "${FinalTarget}" =~ ^ext-.* ]]; then
+            echo "It is an extention"
+            echo $(Target)
+            FinalTarget=${FinalTarget:4}
+            azdev extension add ${FinalTarget}
+          fi
+          echo ${FinalTarget}
+          
           # This helps detect issues in CI if a used SDK API version is deleted by the below script.
           python $workDir/s/scripts/trim_sdk.py
   
@@ -1620,14 +1630,14 @@ stages:
           # Whether commit changes
           if [[ "$(USER_USERNAME)" != "" && "$(USER_TOKEN)" != "" ]]; then
             echo "Commit mode"
-            azdev test ${FinalTarget} --no-exitfirst -a "-n auto"
-            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} --no-exitfirst -a "-n $(USER_PARALLELISM)"
+            azdev test ${FinalTarget} --live --lf --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           else
             echo "Normal mode"
             # Sequential
             azdev test ${FinalTarget} $(USER_LIVE) --mark serial --xml-path test_results.sequential.xml --no-exitfirst -a "-n 1 --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.sequential.json --html=$(Target).$(platform).report.sequential.html --self-contained-html --capture=sys"
             # Parallel
-            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n auto --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
+            azdev test ${FinalTarget} $(USER_LIVE) --mark "not serial" --xml-path test_results.parallel.xml --no-exitfirst -a "-n $(USER_PARALLELISM) --json-report --json-report-summary --json-report-file=$(Target).$(platform).report.parallel.json --html=$(Target).$(platform).report.parallel.html --self-contained-html --capture=sys"
           fi
   
           pwd
